# monarch-mcp-server

./: .gitignore  Dockerfile  README.md  login_setup.py  push_monarch_token.py  pyproject.toml  requirements-azure.txt  requirements.txt
.github/: FUNDING.yml
scripts/: daily_snapshot.py  run_daily_snapshot.sh
src/monarch_mcp_server/: cloud_session.py  investments.py  remote_server.py  secure_session.py  server.py  token_store.py
tests/: test_investments.py
